doc update: todo structure

--- a/README.adoc
+++ b/README.adoc
@@ -1,20 +1,28 @@
 = deployme
 Dummy project for deployment investigations.
 
-=== rough list of possible todo:
+== rough list of possible todo:
 
+==== maven plugins
 - [ ] maven release plugin
-- [ ] scm plugin
+- [ ] maven scm plugin
+- [ ] maven versions plugin
+- [ ] maven deploy plugin
 
-- [ ] marathon
-
+==== containers
 - [ ] docker
 - [ ] docker repository
 
+==== container orchestration
+- [ ] marathon
+
+==== build pipeline
 - [ ] gitlab ci
+
+==== other
 - [ ] consider using something bigger e.g. https://github.com/golonzovsky/vehicle-fleet-demo[vehicle fleet] or https://github.com/joshlong/bootiful-microservices[bootiful microservices]
 
-=== releasing
+== releasing
 . checkout 1.0-SNAPSHOT
 . update POM version to 1.0-RELEASE
 * `versions:set -DnewVersion=`
@@ -27,7 +35,7 @@ Dummy project for deployment investigations.
 * `versions:set -DnewVersion=`
 . commit
 
-=== links
+== links
 https://gist.github.com/golonzovsky/ae9cb92c020f0b8833519447b7471281[tomcat-undeploy-all] +
 https://gist.github.com/golonzovsky/8e8e0c7e2acc69225c9757adbe1ccc15[mesos-tomcat] +
 https://axelfontaine.com/blog/final-nail.html[final nail to release plugin]
