--- a/README.adoc
+++ b/README.adoc
@@ -1,28 +1,28 @@
 = deployme
 Dummy project for deployment investigations.
 
-== rough list of possible todo:
+== possible todo:
 
 ==== maven plugins
-- [ ] maven release plugin
-- [ ] maven scm plugin
 - [*] maven versions plugin
+- [*] maven release plugin
+- [*] maven build-helper plugin
+- [ ] maven scm plugin
 - [ ] maven deploy plugin
 
 ==== containers
 - [ ] docker
 - [ ] docker repository
 
-==== container orchestration
-- [ ] marathon
-
 ==== build pipeline
 - [ ] gitlab ci
+
+==== container orchestration
+- [ ] marathon
 
 ==== other
 - [ ] consider using something bigger e.g. https://github.com/golonzovsky/vehicle-fleet-demo[vehicle fleet] or https://github.com/joshlong/bootiful-microservices[bootiful microservices]
 
-'''
 == releasing
 . checkout 1.0-SNAPSHOT
   * `git clone`
@@ -44,14 +44,35 @@ Dummy project for deployment investigations.
 . commit
 
 == Plugins
+
+=== Build-Helper plugin
+http://www.mojohaus.org/build-helper-maven-plugin/parse-version-mojo.html
+
+==== build-helper:parse-version
+Parses POM to find versions and sets properties:
+
+Current version properties: ::
+  * `parsedVersion.majorVersion`
+  * `parsedVersion.minorVersion`
+  * `parsedVersion.incrementalVersion`
+  * `parsedVersion.qualifier`
+  * `parsedVersion.buildNumber`
+
+Next version properties: ::
+  * `parsedVersion.nextMajorVersion`
+  * `parsedVersion.nextMinorVersion`
+  * `parsedVersion.nextIncrementalVersion`
+  * `parsedVersion.nextBuildNumber`
+
 === Versions plugin
-http://www.mojohaus.org/versions-maven-plugin/usage.html
+http://www.mojohaus.org/versions-maven-plugin/usage.html +
+Use `generateBackupPoms=false` in command line or plugin configuration to avoid backup POMs generation.
 
 ==== Goals with no modifications
  * `mvn versions:display-dependency-updates` deep dependency update candidates
  * `mvn versions:display-property-updates`
 
-==== Goals with modifications:
+==== Goals with modifications
  * `mvn versions:set -DnewVersion=2.1.0-SNAPSHOT`
  * `mvn versions:use-latest-releases` - update dependencies
  * `mvn versions:update-parent`
@@ -63,10 +84,33 @@ http://www.mojohaus.org/versions-maven-plugin/usage.html
  * `mvn versions:commit`
 
 '''
-=== Release plugin
 
-==== Revert changes
- * `mvn release:clean`
+=== Release plugin
+Use `--batch-mode` for non-interactive mode. fro example `mvn release:update-versions --batch-mode`
+
+==== Process
+ * no SNAPSHOTs
+ * Change the version in the POMs from x-SNAPSHOT to a new version
+ * Run the project tests
+ * Commit the modified POMs
+ * Bump the version in the POMs to a new value y-SNAPSHOT
+ * Commit the modified POMs
+
+==== Tasks
+ * `mvn release:clean` Clean up after a release preparation.
+ * `mvn release:prepare` Prepare for a release in SCM.
+ * `mvn release:perform` Perform a release from SCM.
+ * `mvn release:update-versions` Update the versions in the POM(s).
+
+== Update process
+==== Remove SNAPSHOT
+`mvn build-helper:parse-version versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} -DgenerateBackupPoms=false`
+
+==== Update release minor version
+`mvn build-helper:parse-version versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.nextMinorVersion}.0 -DgenerateBackupPoms=false`
+
+==== Update release iter version
+`mvn build-helper:parse-version versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} -DgenerateBackupPoms=false`
 
 == links
 https://gist.github.com/golonzovsky/ae9cb92c020f0b8833519447b7471281[tomcat-undeploy-all] +
