readmy - todo travis and jenkins

--- a/README.adoc
+++ b/README.adoc
@@ -17,6 +17,8 @@ Dummy project for deployment investigations.
 
 ==== build pipeline
 - [ ] gitlab ci
+- [x] travis
+- [ ] jenkins
 
 ==== container orchestration
 - [ ] marathon
